@startuml

title __DIGITALCURRENCIES's Class Diagram__\n

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Daily {
            {static} + from()
            - Daily()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Daily.Parser {
            + Parser()
            # getDigitalCurrencyDataKey()
            # resolve()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        abstract class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyParser {
            + resolve()
            {abstract} # getDigitalCurrencyDataKey()
            {abstract} # resolve()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyResponse {
            - digitalData : List<Data>
            - metaData : Map<String, String>
            + DigitalCurrencyResponse()
            + getDigitalData()
            + getMetaData()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.IntraDay {
            + IntraDay()
            {static} + from()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.IntraDay.Parser {
            + Parser()
            # getDigitalCurrencyDataKey()
            # resolve()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Monthly {
            + Monthly()
            {static} + from()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Monthly.Parser {
            + Parser()
            # getDigitalCurrencyDataKey()
            # resolve()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Weekly {
            {static} + from()
            - Weekly()
        }
      }
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    namespace outputForApi {
      namespace digitalcurrencies {
        class com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Weekly.Parser {
            + Parser()
            # getDigitalCurrencyDataKey()
            # resolve()
        }
      }
    }
  }
  

  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Daily -up-|> com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyResponse
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Daily +-down- com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Daily.Parser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Daily.Parser -up-|> com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyParser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Daily.Parser o-- com.cs360.simplestocks.stock_api.inputForApi.digitalCurrencies.Market : market
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyParser -up-|> com.cs360.simplestocks.stock_api.outputForApi.JsonParser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.IntraDay -up-|> com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyResponse
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.IntraDay +-down- com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.IntraDay.Parser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.IntraDay.Parser -up-|> com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyParser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.IntraDay.Parser o-- com.cs360.simplestocks.stock_api.inputForApi.digitalCurrencies.Market : market
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Monthly -up-|> com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyResponse
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Monthly +-down- com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Monthly.Parser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Monthly.Parser -up-|> com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyParser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Monthly.Parser o-- com.cs360.simplestocks.stock_api.inputForApi.digitalCurrencies.Market : market
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Weekly -up-|> com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyResponse
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Weekly +-down- com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Weekly.Parser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Weekly.Parser -up-|> com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.DigitalCurrencyParser
  com.cs360.simplestocks.stock_api.outputForApi.digitalcurrencies.Weekly.Parser o-- com.cs360.simplestocks.stock_api.inputForApi.digitalCurrencies.Market : market


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
